--- a/Szovegszerkeszto/Szovegszerkeszto.csproj
+++ b/Szovegszerkeszto/Szovegszerkeszto.csproj
@@ -8,4 +8,18 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Icons\download.png" />
+    <None Remove="Icons\folder.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Icons\download.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Icons\folder.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
